--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+bcrypt==3.2.0
+cffi==1.14.6
 click==8.0.0
 colorama==0.4.4
 Flask==2.0.0
@@ -5,5 +7,6 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 psycopg2==2.9.1
+pycparser==2.20
+six==1.16.0
 Werkzeug==2.0.1
-bcrypt~=3.2.0
